--- a/_includes/fb_timeline.html
+++ b/_includes/fb_timeline.html
@@ -7,4 +7,4 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-page" data-href="https://www.facebook.com/HCI-ionio-438025583393215/" data-tabs="timeline" data-width="410" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/HCI-ionio-438025583393215/">Human Computer Interaction - HCI</a></blockquote></div>
+<div class="fb-page" data-href="https://www.facebook.com/HCI-ionio-438025583393215/" data-tabs="timeline" data-width="410" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/HCI-ionio-438025583393215/">HCI Ionio</a></blockquote></div>
